--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 50px;
+}
+
+.addTask{
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.addTask input{
+  padding: 10px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+}
+.addTask button {
+  padding: 10px;
+  background-color: rgb(2, 172, 2);
+  border: none;
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.list{
+  width: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list div{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f9f9f9;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+}
+
+.list h1{
+  margin: 0;
+}
+
+.list button{
+  background-color: rgb(255, 97, 97);
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
